# ecs-manager

./: .gitignore  README.md  env.example  pyproject.toml  requirements-build.txt  requirements.txt
ecs/: __main__.py  aliyun_ecs.py  cli.py  ssh_config.py  state.py  util.py
scripts/: build_macos.sh  build_macos_nuitka.sh  build_windows.ps1  build_windows_nuitka.ps1
